# tactical-twin

./: .gitignore  CLAUDE.md  README.md  design.md  project-brief.md
.claude/: settings.local.json
design/: design.md  spec.md
pipeline/: main.py  pyproject.toml
pipeline/src/tactical_twin_pipeline/: export_splat.py  extract_collision.py  extract_frames.py  pipeline.py  process_data.py  train_splat.py
scripts/: full-pipeline.sh
unity-viewer/: .gitmodules
unity-viewer/Assets/Configs/: livingroom_walls.json  targets.json
unity-viewer/Assets/Scenes/: SampleScene.unity
unity-viewer/Assets/Scripts/: AudioManager.cs  BulletHole.cs  FPSController.cs  GunModel.cs  HUDManager.cs  ProceduralSFX.cs  RoomBlockData.cs  RoomCalibrator.cs  RoomColliders.cs  RoomPolygon.cs  ShootingSystem.cs  Target.cs  TargetManager.cs
unity-viewer/Assets/Settings/: PC_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
unity-viewer/ProjectSettings/: ProjectSettings.asset
