[project]
name = "tactical-twin-pipeline"
version = "0.1.0"
description = "Video to 3D Gaussian splat reconstruction pipeline for Tactical Twin"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "click>=8.0",
    "rich>=13.0",
    "torch>=2.4.0,<2.5",
    "torchvision>=0.19.0,<0.20",
    "plyfile>=1.0",
    "tqdm",
    "nerfstudio",
    "ninja",
]

[project.scripts]
tt-pipeline = "tactical_twin_pipeline.pipeline:main"
tt-extract = "tactical_twin_pipeline.extract_frames:main"
tt-train = "tactical_twin_pipeline.train_splat:main"
tt-export = "tactical_twin_pipeline.export_splat:main"
tt-collision = "tactical_twin_pipeline.extract_collision:main"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "gsplat-whl"
url = "https://docs.gsplat.studio/whl/pt24cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
gsplat = [{ index = "gsplat-whl" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tactical_twin_pipeline"]
